Fix wrapping

--- a/hwk04/styles/contact.css
+++ b/hwk04/styles/contact.css
@@ -221,6 +221,7 @@ textarea {
   display: flex;
   flex-direction: row;
   gap: calc(var(--rhythm) * 2);
+  flex-wrap: wrap;
 }
 
 .radio-group label {
